--- a/source/themes/custom/crescenttool/styles/libraries/region/footer.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/region/footer.scss
@@ -264,6 +264,18 @@ $footer-bp-mobile: '<sm';
   }
 }
 
+@media (min-width: 1800px) and (max-width: 2499px) {
+  .region-footer {
+    background: linear-gradient(to right, $secondary-black 56%, $gray-90 56%);
+  }
+}
+
+@media (min-width: 2500px) {
+  .region-footer {
+    background: linear-gradient(to right, $secondary-black 54%, $gray-90 54%);
+  }
+}
+
 @media (min-width: 1025px) and (max-width: 1150px) {
   .region-footer {
     .region-footer-second__content {
