changed section opacity to 1 and title position and zindex

--- a/source/themes/custom/crescenttool/styles/libraries/paragraph/full--section.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/paragraph/full--section.scss
@@ -23,6 +23,8 @@
   .component-section__title {
     @include type-header(h2, black, included);
     text-align: center;
+    position: relative;
+    z-index: 1;
   }
 
   .component-section__content {
