feature/VYRKCATG-146: The latest changes for new products.

--- a/source/themes/custom/gearwrench/styles/libraries/view/new-products.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/view/new-products.scss
@@ -35,6 +35,7 @@
     .filter-icon {
       @include icon('filter', after);
 
+      cursor: pointer;
       display: inline-block;
       font-size: 18px;
       margin-right: 20px;
@@ -43,6 +44,7 @@
     .sort-icon {
       @include icon('sort', after);
 
+      cursor: pointer;
       display: inline-block;
     }
   }
