updated twig comment

--- a/docroot/themes/custom/gearwrench/templates/block/block--wherebuypricespiderwidget.html.twig
+++ b/docroot/themes/custom/gearwrench/templates/block/block--wherebuypricespiderwidget.html.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * @file
- * Theme override to display a block.
+ * Theme override for the where buy page pricespider generic widget block.
  *
  * Available variables:
  * - plugin_id: The ID of the block implementation.
