--- a/source/themes/custom/crescenttool/styles/libraries/block/pricespider-generic-widget.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/block/pricespider-generic-widget.scss
@@ -4,6 +4,10 @@
 
 @import '../../globals';
 
+.page-title {
+  display: none
+}
+
 .block-pricespider-generic-widget-block {
   @include media('<350px') {
     @include container-full-width();
