removed steps preprocess and updated css color

--- a/source/themes/custom/crescenttool/styles/libraries/paragraph/full--steps.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/paragraph/full--steps.scss
@@ -41,12 +41,12 @@
 
     .component-steps__title,
     .component-step__content {
-      color: $black;
+      color: $secondary-black;
     }
   }
 
   &.component-steps--color-dark {
-    background-color: $black;
+    background-color: $secondary-black;
 
     .component-steps__title,
     .component-step__content {
