--- a/source/themes/custom/gearwrench/styles/libraries/view/view.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/view/view.scss
@@ -78,28 +78,29 @@
       }
 
       @include media('<sm') {
+        font-size: rem(12px);
+
         &.pager__item--first,
-        &.pager__item--ellipsis,
         &.pager__item--last {
           display: none;
         }
 
+        &.pager__item--previous + .pager__item--ellipsis {
+          padding-right: 0;
+        }
+
+        &.pager__item--ellipsis:nth-last-child(3) {
+          padding-left: 0;
+        }
+
         &.pager__item--previous,
         &.pager__item--next {
-          font-size: rem(15px);
+          font-size: rem(13px);
 
           a {
-            padding: rem(10px 20px);
+            padding: rem(8px 18px);
             background-color: $gray-20;
           }
-        }
-
-        &.pager__item--previous {
-          margin-right: rem(5px);
-        }
-
-        &.pager__item--next {
-          margin-left: rem(5px);
         }
       }
     }
