--- a/source/themes/custom/gearwrench/styles/libraries/paragraph/full--embed-view.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/paragraph/full--embed-view.scss
@@ -15,7 +15,7 @@
  */
 .paragraph--type-embed-view {
   @include media('<=md') {
-    left: calc(-47vw + 50%);
+    // left: calc(-47vw + 50%); making new products shift to the lef
     position: relative;
   }
 }
