--- a/source/themes/custom/gearwrench/styles/libraries/view/search.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/view/search.scss
@@ -123,6 +123,16 @@
     margin-top: rem(60px);
   }
 
+  .view-search__header-product-results {
+    font-size: rem(14px);
+    margin-bottom: rem(10px);
+
+    @include media('>=md') {
+      font-size: rem(16px);
+      margin-bottom: rem(15px);
+    }
+  }
+
   .view-filters {
     .views-exposed-form {
       display: none;
