Updated Bazaar voice styling and added CT bazaar voice styling

--- a/source/themes/custom/crescenttool/styles/contrib-overrides/bazaarvoice/bazaarvoice.scss
+++ b/source/themes/custom/crescenttool/styles/contrib-overrides/bazaarvoice/bazaarvoice.scss
@@ -16,7 +16,7 @@
 .bv-cv2-cleanslate {
   .bv-inline-histogram-ratings-star {
     .bv-glyph {
-      color: $primary-orange !important;
+      color: $primary-red !important;
     }
   }
 
