Updated modal links with icons

--- a/source/themes/custom/gearwrench/styles/contrib-overrides/bazaarvoice/bazaarvoice.scss
+++ b/source/themes/custom/gearwrench/styles/contrib-overrides/bazaarvoice/bazaarvoice.scss
@@ -33,9 +33,30 @@
         }
       }
     }
+
+    .bv-submission-button-submit {
+      @include icon(tertiary-link, after, true);
+      display: flex !important;
+      align-items: center;
+
+      &::after {
+        margin-left: rem(10px);
+      }
+    }
   }
 
   .bv-action-bar {
+    button {
+      @include icon(tertiary-link, after, true);
+      display: flex !important;
+      align-items: center;
+
+      &::after {
+        margin-left: rem(10px);
+        vertical-align: bottom;
+      }
+    }
+
     .bv-write-review-container {
       .bv-write-review {
         @include icon(tertiary-link, after, true);
