added live area to featured media and configured styles.

--- a/source/themes/custom/gearwrench/styles/libraries/paragraph/full--featured-media--layout-full.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/paragraph/full--featured-media--layout-full.scss
@@ -14,6 +14,9 @@
  * Component
  */
 .component-featured-media--layout-full {
+  margin-left: -2rem;
+  margin-right: -2rem;
+
   .component-featured-media__list {
     list-style: none;
     padding: 0;
@@ -31,13 +34,15 @@
       width: 100%;
       height: auto;
     }
-    @include media('<=sm') {
-      @include container-full-width();
-    }
   }
 
   video {
     height: 100%;
     width: 100%;
+  }
+
+  @media (min-width: 75em) {
+    margin-left: calc(-100vw / 2 + 75em / 2);
+    margin-right: calc(-100vw / 2 + 75em / 2);
   }
 }
