added margin to node

--- a/source/themes/custom/gearwrench/styles/libraries/node/full--media-page.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/node/full--media-page.scss
@@ -15,6 +15,7 @@
  */
 .node--type-media-page.node--view-mode-full {
   margin-bottom: rem(50px);
+  margin-top: rem(35px);
 
   .node__top-content {
     display: grid;
