VYRKCATG-245: Added product categories to media pages.

--- a/source/themes/custom/gearwrench/styles/libraries/node/full--media-page.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/node/full--media-page.scss
@@ -54,7 +54,7 @@
       }
     }
 
-    .node__tags {
+    .node__tags, .node__categories {
       .field--label-inline {
         .field__label {
           float: unset;
