--- a/docroot/themes/custom/gearwrench/templates/node/node--media-page--full.html.twig
+++ b/docroot/themes/custom/gearwrench/templates/node/node--media-page--full.html.twig
@@ -85,6 +85,9 @@
       <div class="node__cta">
         {{ cta }}
       </div>
+      <div class="node__categories">
+        {{ categories }}
+      </div>
       <div class="node__tags">
         {{ tags }}
       </div>
