--- a/docroot/modules/custom/gearwrench_core/templates/block--footer-navigation-block.html.twig
+++ b/docroot/modules/custom/gearwrench_core/templates/block--footer-navigation-block.html.twig
@@ -29,9 +29,10 @@
     <div{{ content_attributes }}>
       <section class="block-footer-navigation-block__footer-address-social-menu-container">
         <div class="block-footer-navigation-block__footer-address">
-          <p>Address and Shipping</p>
-          <p>City, State Zip Code</p>
-          <p><a href="tel:888-888-888">888-888-888</a></p>
+          <p class="block-footer-navigation-block__footer-address-first">{{ content.address_line_1 }}</p>
+          <p class="block-footer-navigation-block__footer-address-second">{{ content.address_line_2 }}</p>
+          <p class="block-footer-navigation-block__footer-address-city">{{ content.address_line_3 }}</p>
+          <p class="block-footer-navigation-block__footer-address-phone"><a href="tel:{{ content.phone_raw }}">{{ content.phone }}</a></p>
         </div>
         <div class="block-footer-navigation-block__footer-social-menu-wrapper">
           {{ content.social_menu }}
