Updated CSS with wrapper div, updated preprocess for both images

--- a/source/themes/custom/gearwrench/styles/libraries/node/full--media-page.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/node/full--media-page.scss
@@ -101,15 +101,17 @@
     }
   }
 
-  & > .paragraph-component {
-    margin-top: $gap-vertical-md;
+  .node__bottom-content {
+    & > .paragraph-component {
+      margin-top: $gap-vertical-md;
 
-    @include media('>=md') {
-      margin-top: $gap-vertical-md-plus;
-    }
+      @include media('>=md') {
+        margin-top: $gap-vertical-md-plus;
+      }
 
-    &:last-of-type {
-      margin-bottom: 5rem;
+      &:last-of-type {
+        margin-bottom: 5rem;
+      }
     }
   }
 }
