Updated media page full preprocess to obtain file url, updated twig to output the file, updated responsive image styles for hero

--- a/docroot/themes/custom/gearwrench/templates/node/node--media-page--full.html.twig
+++ b/docroot/themes/custom/gearwrench/templates/node/node--media-page--full.html.twig
@@ -85,6 +85,9 @@
       <div class="node__cta">
         {{ cta }}
       </div>
+      {% if file is not null %}
+        <div>{{ file }}</div>
+      {% endif %}
       <div class="node__categories">
         {{ categories }}
       </div>
