--- a/source/themes/custom/gearwrench/styles/libraries/node/full--media-page.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/node/full--media-page.scss
@@ -54,7 +54,8 @@
       }
     }
 
-    .node__tags, .node__categories {
+    .node__tags,
+    .node__categories {
       margin-bottom: 2rem;
 
       .field--label-inline {
