Added download link boolean, removed cta, updated twig, css, and preprocess,

--- a/source/themes/custom/gearwrench/styles/libraries/node/full--media-page.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/node/full--media-page.scss
@@ -48,7 +48,7 @@
     }
 
     .node__cta {
-      .field--name-field-link a {
+      a {
         @include btn(primary);
         margin-bottom: rem(26px);
       }
