--- a/source/themes/custom/gearwrench/styles/libraries/node/full--media-page.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/node/full--media-page.scss
@@ -45,6 +45,19 @@
           height: 100%;
         }
       }
+
+      &.media--type-remote-video {
+        padding-top: 25%;
+        position: relative;
+
+        iframe {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+        }
+      }
     }
 
     .node__cta {
