--- a/source/themes/custom/gearwrench/styles/libraries/node/teaser--media-page.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/node/teaser--media-page.scss
@@ -24,7 +24,7 @@
 
   .node__content {
     height: 100%;
-    word-break: break-all;
+    word-break: break-word;
 
     .node__listing-image {
       @include flex();
@@ -34,6 +34,7 @@
       display: flex;
       overflow: hidden;
       padding-top: 0;
+      width: 100%;
 
       .field[data-blazy] {
         min-width: 100%;
