Removed object fit from iframe,

--- a/source/themes/custom/gearwrench/styles/libraries/node/search-index.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/node/search-index.scss
@@ -45,7 +45,6 @@
 
         img,
         iframe {
-          object-fit: cover;
           height: 100%;
           width: 100%;
           position: absolute;
@@ -53,6 +52,10 @@
           left: 0;
           right: 0;
           bottom: 0;
+        }
+
+        img {
+          object-fit: cover;
         }
       }
     }
