--- a/source/themes/custom/crescenttool/styles/libraries/paragraph/full--featured-media--layout-slider.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/paragraph/full--featured-media--layout-slider.scss
@@ -50,9 +50,13 @@
         display: block;
         height: 100%;
         max-width: 100%;
-        object-fit: cover;
         position: absolute;
         width: 100%;
+      }
+
+      .media__image,
+      img {
+        object-fit: cover;
       }
     }
   }
