--- a/source/themes/custom/gearwrench/styles/libraries/node/teaser--media-page.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/node/teaser--media-page.scss
@@ -48,7 +48,6 @@
 
         img,
         iframe {
-          object-fit: cover;
           height: 100%;
           width: 100%;
           position: absolute;
@@ -56,6 +55,10 @@
           left: 0;
           right: 0;
           bottom: 0;
+        }
+
+        img {
+          object-fit: cover;
         }
       }
     }
