--- a/source/themes/custom/gearwrench/styles/libraries/paragraph/full--featured-media--layout-slider.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/paragraph/full--featured-media--layout-slider.scss
@@ -111,9 +111,12 @@
           display: block;
           height: 100%;
           max-width: 100%;
-          object-fit: cover;
           position: absolute;
           width: 100%;
+        }
+
+        img {
+          object-fit: cover;
         }
       }
     }
