Added preferred listing image to preprocess, CT & GW changed gap to column and row gap for full--product-slider, added media page type to search-index.scss, removed cta and published date from  media page search index display, changed acquia search media page view mode

--- a/source/themes/custom/crescenttool/styles/libraries/paragraph/full--product-slider.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/paragraph/full--product-slider.scss
@@ -62,11 +62,13 @@
       height: 100%;
       display: flex;
       flex-wrap: wrap;
-      gap: 1rem; // sass-lint:disable-line no-misspelled-properties
+      column-gap: 1rem;
+      row-gap: 1rem;
 
       @include media('>=lg') {
         flex-wrap: nowrap;
-        gap: 1.5rem; // sass-lint:disable-line no-misspelled-properties
+        column-gap: 1rem;
+        row-gap: 1rem;
       }
 
       .component-product-slider__list-item {
