--- a/source/themes/custom/crescenttool/styles/libraries/paragraph/full--product-slider.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/paragraph/full--product-slider.scss
@@ -62,20 +62,19 @@
       height: 100%;
       display: flex;
       flex-wrap: wrap;
-      column-gap: 1rem;
-      row-gap: 1rem;
+      column-gap: rem(24px);
+      row-gap: 1rem; // sass-lint:disable-line no-misspelled-properties
 
       @include media('>=lg') {
         flex-wrap: nowrap;
-        column-gap: 1rem;
-        row-gap: 1rem;
+        row-gap: unset; // sass-lint:disable-line no-misspelled-properties
       }
 
       .component-product-slider__list-item {
         width: calc(50% - 1rem);
 
         @include media('>=lg') {
-          width: calc(25% - 1.5rem);
+          width: 25%;
         }
       }
     }
