updated views to not be ajax and fixed wrong thumbnail inssue on media pages.

--- a/source/themes/custom/gearwrench/styles/libraries/node/full--media-page.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/node/full--media-page.scss
@@ -47,7 +47,7 @@
       }
 
       &.media--type-remote-video {
-        padding-top: 25%;
+        padding-top: 2rem;
         position: relative;
 
         iframe {
