--- a/source/themes/custom/gearwrench/styles/libraries/paragraph/full--product-slider.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/paragraph/full--product-slider.scss
@@ -63,7 +63,7 @@
       display: flex;
       flex-wrap: wrap;
       column-gap: rem(24px);
-      row-gap: 1rem; // sass-lint:disable-line no-misspelled-properties
+      row-gap: rem(24px); // sass-lint:disable-line no-misspelled-properties
 
       @include media('>=lg') {
         flex-wrap: nowrap;
