--- a/source/themes/custom/gearwrench/styles/libraries/node/full--product-category.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/node/full--product-category.scss
@@ -88,6 +88,65 @@
       display: none;
       grid-column: 1;
 
+      &.mobile-show {
+        display: flex;
+        flex-direction: column;
+        background-color: #FFFFFF;
+        box-shadow: 0rem 0rem 3rem 5rem rgba(0, 0, 0, 0.6);
+        bottom: 0;
+        left: 15vw;
+        padding-top: 75px;
+        padding-left: 1rem;
+        position: fixed;
+        top: 0;
+        right: 0;
+        width: 85vw;
+        z-index: 499;
+    
+        &.hide {
+          display: none;
+          z-index: -5;
+        }
+
+        .fieldgroup {
+          order: 2;
+          width: 85%;
+        }
+
+        .mobile-filter-header {
+          border-bottom: 1px solid #000000;
+          height: 3rem;
+          max-width: 100%;
+          order: 1;
+        }
+
+        .mobile-filter-header-inner {
+          align-items: center;
+          display: flex;
+          height: 3rem;
+          justify-content: space-between;
+          max-width: 85%;
+        }
+
+        .mobile-close-icon {
+          height: 2rem;
+          width: 2rem;
+
+          &:before {
+            content: icon-char('close');
+          }
+        }
+
+        legend {
+          width: 85vw;
+
+          .fieldset-legend {
+            width: 85%;
+          }
+        }
+
+      }
+
       @include media('>=md') {
         display: block;
       }
@@ -173,6 +232,13 @@
         .sort-icon {
           @include icon('sort', after);
         }
+
+        @include media('>=md') {
+          .sort-icon {
+            visibility: hidden;
+          }
+        }
+        
       }
 
       .view-content {
@@ -202,4 +268,52 @@
 
   }
 
+  .mobile-panel {
+    // background-color: #FEFEFE;
+    // box-shadow: 0rem 0rem 3rem 5rem rgba(0, 0, 0, 0.4);
+    // bottom: 0;
+    // // height: 100vw;
+    // left: 15vw;
+    // padding-top: 70px;
+    // padding-left: 1rem;
+    // position: fixed;
+    // top: 0;
+    // right: 0;
+    // width: 85vw;
+
+    .mobile-close {
+      content: icon-char('close');
+      height: 2rem;
+      position: absolute;
+      right: 2rem;
+      width: 2rem;
+    }
+
+    &.show {
+      display: block;
+      z-index: 499;
+    }
+
+    &.hide {
+      display: none;
+      z-index: -5;
+    }
+
+    .gearwrench-product-category-filters {
+      display: block;
+      grid-column: 1;
+      position: absolute;
+      width: 70vw;
+
+      fieldset {
+        margin: 0;
+        padding: 0;
+      }
+
+      .form-item {
+        font-size: rem(14px);
+        margin-bottom: 1rem !important;
+      }
+    }
+  }
 }
